K8s folder/project/notes-app/k8s/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-dep
  namespace: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
      - name: notes-app
        image: trainwithshubham/notes-app-k8s
        ports:
        - containerPort: 8000
