K8s folder/project/notes-app/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-svc
  namespace: notes-app
spec:
  selector:
    app: notes-app
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
